[gd_scene load_steps=6 format=3 uid="uid://cmtsvvo3akckg"]

[ext_resource type="Texture2D" uid="uid://iu41kr7lcfsw" path="res://Art/FlySpawner.png" id="1_u13dl"]
[ext_resource type="Script" uid="uid://bq0h4ciyi4j5j" path="res://Scripts/FlySpawner.gd" id="1_x6wrl"]

[sub_resource type="Animation" id="Animation_u13dl"]
resource_name = "anim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_x6wrl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0dw32"]
_data = {
&"RESET": SubResource("Animation_x6wrl"),
&"anim": SubResource("Animation_u13dl")
}

[node name="FlySpawner" type="Node2D"]
script = ExtResource("1_x6wrl")

[node name="SpawnPosition" type="Node2D" parent="."]
position = Vector2(-1, -64)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_u13dl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0dw32")
}
speed_scale = 2.5

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
